# GodotCppCMakeTemplate

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
godot_extension/: template.gdextension
src/: register_types.cpp
src/sample_node/: SampleNode.cpp  SampleNode.hpp
submodules/: CMakeLists.txt
